--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "icon": "svgr svgs -d components/svgs --icon --replace-attr-values \"#fff=currentColor\""
   },
   "dependencies": {
-    "@svgr/cli": "^5.5.0",
-    "next": "10.2.3",
+    "@svgr/cli": "^8.1.0",
+    "next": "^14.2.2",
     "next-i18next": "^8.5.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-to-print": "^2.12.6",
     "styled-components": "^5.3.0"
   }
